--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
+bcrypt==3.1.3
+beautifulsoup4==4.6.0
+bs4==0.0.1
+cffi==1.10.0
 gevent==1.2.1
 greenlet==0.4.12
-konlpy==0.4.4
+pycparser==2.17
+six==1.10.0
